# emol

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml  pypi.yml
emol/fitting/: bootstrap.py  cv.py  dummy.py  holdout.py
emol/metrics/: moo.py
emol/meus/: meus.py
emol/misc/knn/: __init__.py  dwknn.py  exknn.py  knn.py
emol/moo/mcdm/: saw.py
emol/moo/solver/: default_solver.py
emol/mows/: constrained.py  mows copy.py  mows.py
src/emol/fbeta/: __init__.py  fbeta.py  plot.py
src/emol/fitting/: __init__.py  bootstrap.py  dummy.py  leaking.py
src/emol/helpers/: keel.py
src/emol/helpers/plot/: radar.py
src/emol/metrics/: __init__.py  binary_confusion_matrix.py
src/emol/meus/: constrained.py  meus.py
src/emol/misc/knn/: knn.py  sdknn.py
src/emol/misc/random_classifier/: bayes_random_classifier.py  random_classifier.py
src/emol/moo/evaluation/: metrics.py
src/emol/moo/mcdm/: saw.py
src/emol/moo/solver/: default_solver.py
src/emol/mows/: __init__.py  constrained.py  mows.py
src/mol/fitting/: __init__.py  cv.py  holdout.py  synthetic.py
src/mol/helpers/: latex.py
src/mol/helpers/plot/: colored_plot.py  colors.py
src/mol/metrics/: binary_confusion_matrix.py
src/mol/meus/: __init__.py
src/mol/misc/: __init__.py
src/mol/misc/ftest/: __init__.py  ftest.py
src/mol/moo/solver/: uniform_mutation.py
