[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["emol"]

[project]
name = "scikit-emol"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Szymon Wojciechowski", email = "szymon.wojciechowski@pwr.edu.pl" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Dependencies go here directly
dependencies = [
    "numpy>=1.20.0",
]

[project.urls]
Homepage = "https://github.com/swojciechowski/emol"
